Update tests for new Sample Type designer